edited categoryServiceTest file for category relationship